# guedes-imob-sys

./: .gitignore  LICENSE  README.md  compose.yaml  pyproject.toml
api/: .dockerignore  Dockerfile  __init__.py  crud.py  database.py  entrypoint.sh  main.py  models.py  pyproject.toml  requirements.txt  router.py  schemas.py
api/SQL/: trigger_aluguel.sql
apiOld/: __init__.py
app/: .dockerignore  Dockerfile  Home.py  api.py  app.py  entrypoint.sh  pyproject.toml  requirements.txt
app/pages/: 0_Caixa.py  0_Página_Inicial.py  1_Aluguéis.py  2_Apartamentos.py  3_Despesas.py  4_Garagens.py  5_Proprietários.py  6_Ficha_de_Inquilinos.py  7_Pagamentos.py  8_Relatórios.py  9_Planilha_de_Reservas.py  Configurações.py
app/utils/: mydate.py  myfunc.py  mynum.py  mypdf.py  mystr.py  urls.py
backend/: README.md  controller.py  crud.py  crud2.py  database.py  main.py  main2.py  models.py  models2.py  requirements.txt  router.py  router2.py  routes.py  schemas.py  schemas2.py
db/: .dockerignore  Dockerfile  fakers.py  init-db.sh  schemascopy.py
frontend/: README.md  app.py  config.yaml  requirements.txt
frontend/pages/: 0_Página_Inicial.py  1_Aluguéis.py  2_Apartamentos.py  3_Despesas.py  3_Despesas_Recorrentes.py  4_Edifícios.py  4_Garagens.py  5_Garagens.py  5_Proprietários.py  6_Ficha_de_Inquilinos.py  6_Gastos_Variáveis.py  7_Proprietários.py  7_Relatórios.py  8_Ficha_de_Inquilinos.py  8_Inquilinos.py  (+4 more)
prototipe/: README.md  controller.py  db.py  models.py  schemas.py
schemas/: __init__.py
schemasOld/: __init__.py
src/: __init__.py  create_db.py  dbconfig.py
(+8 files in other folders)
