[project]
name = "estate-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.8.9",
    "fastapi>=0.115.5",
    "pydantic>=2.10.2",
    "sqlalchemy>=2.0.36",
    "streamlit>=1.40.2",
    "uvicorn>=0.32.1",
]
