[project]
name = "estate-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.5",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.10.2",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.36",
    "streamlit-authenticator>=0.4.1",
    "streamlit>=1.41.1",
    "uvicorn>=0.32.1",
]
